@@ -154,9 +154,11 @@ gst_ttmlrender_new_region (GstTTMLRender *render, const gchar *id,
 
   attr = gst_ttml_style_get_attr (style, GST_TTML_ATTR_EXTENT);
   if (attr) {
-    gst_ttml_attribute_normalize_length (&render->base.state, attr, 0, 0);
+    gst_ttml_attribute_normalize_length (&render->base.state, attr->type,
+        &attr->value.length[0], 0);
     region->extentx = attr->value.length[0].f;
-    gst_ttml_attribute_normalize_length (&render->base.state, attr, 1, 1);
+    gst_ttml_attribute_normalize_length (&render->base.state, attr->type,
+        &attr->value.length[1], 1);
     region->extenty = attr->value.length[1].f;
   } else {
     region->extentx = render->base.state.frame_width;
